--- a/en/index.html
+++ b/en/index.html
@@ -8,10 +8,10 @@
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<link rel="stylesheet" href="/css/reset.css" media="all">
-	<link rel="stylesheet" href="/css/slick.css" media="all">
-	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="/css/style.css" media="all">
+	<link rel="stylesheet" href="../css/reset.css" media="all">
+	<link rel="stylesheet" href="../css/slick.css" media="all">
+	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
+	<link rel="stylesheet" href="../css/style.css" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
@@ -145,11 +145,11 @@
 								<p class="small">
 									Companies on Product Protocol can scale further than ever before. A universal token for the tokenization of any assets allows you to instantly create a digital asset and a decentralized market will enable people from all over the world to purchase it.
 								</p>
-								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="/video.mp4">Watch video</a></div>
+								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI">Watch video</a></div>
 							</div>
 							<div class="split-col">
 								<div class="video">
-									<a class="video-button js-fancybox" data-fancybox href="/video.mp4"></a>
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI"></a>
 								</div>
 							</div>
 						</div>
@@ -157,9 +157,8 @@
 				</section>
 			</div>
 			<div class="bottom-panel">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#" class="button white moved-to-bottom-panel hide">join the whitelist</a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -236,15 +235,15 @@
 							</div>
 						</div>
 					</div>
-					<a href="#" class="protocol-button">
+					<a href="#connect-popup" data-fancybox class="protocol-button">
 						<img src="/images/protocol-button.png" alt="">
 					</a>
 				</div>
 			</section>
 			<div class="bottom-panel">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button dark"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel">join the whitelist</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">join the whitelist</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -357,186 +356,11 @@
 				</div>
 			</section>
 			<div class="bottom-panel">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel">join the whitelist</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">join the whitelist</a>
 			</div>
 		</div>
-		<!--
-		<div class="box-wrapper">
-			<div class="page-scroller-wrapper">
-				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
-				</ul>
-			</div>
-			<div class="blot blot-7"></div>
-			<section class="box box-table partners" id="partners">
-				<div class="box-cell">
-					<h2 class="box-title">
-						Partners/ Media
-					</h2>
-					<h3 class="box-title-ann">Partners</h3>
-					<ul class="partners-list">
-						<li class="partners-list-item"><img src="/images/partner-image-1.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-2.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-3.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-4.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-1.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-2.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-3.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-4.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-1.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-2.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-3.png" alt=""></li>
-						<li class="partners-list-item"><img src="/images/partner-image-4.png" alt=""></li>
-					</ul>
-				</div>
-			</section>
-			<section class="box box-table team" id="team">
-				<div class="box-cell">
-					<h2 class="box-title ta-r">
-						Team
-					</h2>
-					<h3 class="box-title-ann ta-r">Team</h3>
-					<div class="team-slider-wrapper">
-						<div class="team-slider">
-							<div class="team-slide">
-								<div class="team-social"><span class="icon lin-icon"></span></div>
-								<div class="team-image">
-									<img src="/images/team-image-1.jpg" alt="">
-								</div>
-								<div class="team-name">
-									Andrey Dakhovskyy
-								</div>
-								<div class="team-type">
-									Founder
-								</div>
-								<div class="team-description">
-									<p>Music Industry Expert.</p>
-									<p>Founder and CEO of Ukrainian</p>
-									<p>Records/Universal</p>
-									<p>Music Group Affiliate till2009. FOunder and</p>
-								</div>
-							</div>
-							<div class="team-slide">
-								<div class="team-social"><span class="icon lin-icon"></span></div>
-								<div class="team-image">
-									<img src="/images/team-image-1.jpg" alt="">
-								</div>
-								<div class="team-name">
-									Andrey Dakhovskyy
-								</div>
-								<div class="team-type">
-									Founder
-								</div>
-								<div class="team-description">
-									<p>Music Industry Expert.</p>
-									<p>Founder and CEO of Ukrainian</p>
-									<p>Records/Universal</p>
-									<p>Music Group Affiliate till2009. FOunder and</p>
-								</div>
-							</div>
-							<div class="team-slide">
-								<div class="team-social"><span class="icon lin-icon"></span></div>
-								<div class="team-image">
-									<img src="/images/team-image-1.jpg" alt="">
-								</div>
-								<div class="team-name">
-									Andrey Dakhovskyy
-								</div>
-								<div class="team-type">
-									Founder
-								</div>
-								<div class="team-description">
-									<p>Music Industry Expert.</p>
-									<p>Founder and CEO of Ukrainian</p>
-									<p>Records/Universal</p>
-									<p>Music Group Affiliate till2009. FOunder and</p>
-								</div>
-							</div>
-							<div class="team-slide">
-								<div class="team-social"><span class="icon lin-icon"></span></div>
-								<div class="team-image">
-									<img src="/images/team-image-1.jpg" alt="">
-								</div>
-								<div class="team-name">
-									Andrey Dakhovskyy
-								</div>
-								<div class="team-type">
-									Founder
-								</div>
-								<div class="team-description">
-									<p>Music Industry Expert.</p>
-									<p>Founder and CEO of Ukrainian</p>
-									<p>Records/Universal</p>
-									<p>Music Group Affiliate till2009. FOunder and</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<div class="bottom-panel">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#" class="button white moved-to-bottom-panel">join the whitelist</a>
-			</div>
-		</div>
-		-->
-		<!--
-		<div class="colored-bg v3 box-wrapper">
-			<div class="page-scroller-wrapper">
-				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog & Media</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
-				</ul>
-			</div>
-			<div class="colored-bg-elements">
-				<div class="blot blot-8"></div>
-				<div class="blot blot-9"></div>
-			</div>
-			<section class="box box-table news" id="news">
-				<div class="box-cell">
-					<h2 class="box-title">
-						Blog&Media coverage
-					</h2>
-					<h3 class="box-title-ann">Articles and Publications</h3>
-					<div class="news-list">
-						<div class="news-list-item big">
-							<div class="video">
-								<div class="video-text">Video</div>
-							</div>
-						</div>
-						<div class="news-list-item">
-							<div class="video">
-								<div class="video-text">Video</div>
-							</div>
-						</div>
-						<div class="news-list-item">
-							<div class="video">
-								<div class="video-text">Video</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-		</div>
-		-->
 		<div class="colored-bg v4 box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -559,22 +383,22 @@
 					<h3 class="box-title-ann ta-r">Social</h3>
 					<div class="socials-list">
 						<div class="socials-list-item">
-							<a href="#" class="social-image">
+							<a href="https://t.me/productprotocolio" class="social-image">
 								<img src="/images/social-image-1.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://twitter.com/ProductProtocol" class="social-image">
+							<a href="https://twitter.com/Pprotocolglobal" class="social-image">
 								<img src="/images/social-image-2.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://www.facebook.com/Product-Protocol-231270721071549/" class="social-image">
+							<a href="http://fb.me/pprotocolio" class="social-image">
 								<img src="/images/social-image-8.png" alt="">
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://medium.com/@product.protocol" class="social-image">
+							<a href="https://medium.com/@pprotocolio" class="social-image">
 								<img src="/images/social-image-3.png" alt="">
 							</a>
 						</div>
@@ -607,9 +431,9 @@
 				</div>
 			</section>
 			<div class="bottom-panel last">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel">join the whitelist</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">join the whitelist</a>
 			</div>
 		</div>
 		<footer></footer>
@@ -643,16 +467,82 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="popup large" id="connect-popup">
+		<div class="popup-title">Request Tokenization</div>
+		<div class="form">
+			<div class="form-box">
+				<div class="form-box-title">
+					Your name
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="" required>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					Your email
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="" required>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					Your country
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="">
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-title">
+					Your company name
+				</div>
+				<div class="form-box-container">
+					<input type="text" name="">
+				</div>
+			</div>
+			<div class="form-box form-help">
+				<div class="form-box-container">
+					<strong>We are in compliance with the law and will not transfer your information to any third parties. This form is not a request for and/or advertisment of business activities, public offer, sale or purchase of services, direct or indirect agreement for provision of services or sale of products.</strong>
+				</div>
+				<div class="form-box-container">
+					<label class="checkbox">
+						<input type="checkbox" name="" required>
+						I agree that my information can be transferred upon request from public authorities or other parties in compliance with the law.
+					</label>
+				</div>
+				<div class="form-box-container">
+					<label class="checkbox">
+						<input type="checkbox" name="" required>
+						I acknowledge and agree that my personal data to be transferred and processed by any affiliates and processors of Product Protocol.
+					</label>
+				</div>
+				<div class="form-box-container">
+					<label class="checkbox">
+						<input type="checkbox" name="" required>
+						I confirm the validity of the information provided and accept full responsibility for distortion of information.
+					</label>
+				</div>
+			</div>
+			<div class="form-box">
+				<div class="form-box-container">
+					<input type="submit" name="" value="Send" class="button">
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Popups> -->
 
 
 	<!-- <Scripts -->
-	<script src="/js/jquery-2.0.3.min.js"></script>
-	<script src="/js/slick.min.js"></script>
-	<script src="/js/alfaNavbar.min.js"></script>
-	<script src="/js/jquery.fancybox.min.js"></script>
+	<script src="../js/jquery-2.0.3.min.js"></script>
+	<script src="../js/slick.min.js"></script>
+	<script src="../js/alfaNavbar.min.js"></script>
+	<script src="../js/jquery.fancybox.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-	<script src="/js/scripts.js"></script>
+	<script src="../js/scripts.js"></script>
 	<!-- Scripts> -->
 </body>
 </html>
