--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 								<p class="small">
 									Product Protocol의 회사들은 이전보다도 더 많이 스케일링할 수 있다. 아무 자산의 토큰화를 위한 보편적인 토큰이 디지털 자산을 당장 만들 수 있게 하고 분산적 시장은 전세계 사람들이 그 토큰을 구매할 수 있게 할 것이다.
 								</p>
-								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="/video.mp4">비디오를보다</a></div>
+								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI">비디오를보다</a></div>
 							</div>
 							<div class="split-col">
 								<div class="video">
-									<a class="video-button js-fancybox" data-fancybox href="/video.mp4"></a>
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI"></a>
 								</div>
 							</div>
 						</div>
@@ -155,9 +155,8 @@
 				</section>
 			</div>
 			<div class="bottom-panel">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">화이트리스트에 가입</a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -231,15 +230,15 @@
 							</div>
 						</div>
 					</div>
-					<a href="#" class="protocol-button">
+					<a href="#connect-popup" data-fancybox class="protocol-button">
 						<img src="/images/protocol-button-kr.png" alt="">
 					</a>
 				</div>
 			</section>
 			<div class="bottom-panel">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button dark"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel">화이트리스트에 가입</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">화이트리스트에 가입</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -348,9 +347,9 @@
 				</div>
 			</section>
 			<div class="bottom-panel">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel">화이트리스트에 가입</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">화이트리스트에 가입</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -372,7 +371,7 @@
 					<h3 class="box-title-ann ta-r">사회적인</h3>
 					<div class="socials-list">
 						<div class="socials-list-item">
-							<a href="#" class="social-image">
+							<a href="https://t.me/productprotocolio" class="social-image">
 								<img src="images/social-image-1.png" alt="">
 							</a>
 						</div>
@@ -387,7 +386,7 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://medium.com/@product.protocol" class="social-image">
+							<a href="https://medium.com/@pprotocolio" class="social-image">
 								<img src="images/social-image-3.png" alt="">
 							</a>
 						</div>
@@ -420,9 +419,9 @@
 				</div>
 			</section>
 			<div class="bottom-panel last">
-				<a href="#" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel">화이트리스트에 가입</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">화이트리스트에 가입</a>
 			</div>
 		</div>
 		<footer></footer>
@@ -460,12 +459,12 @@
 
 
 	<!-- <Scripts -->
-	<script src="/js/jquery-2.0.3.min.js"></script>
-	<script src="/js/slick.min.js"></script>
-	<script src="/js/alfaNavbar.min.js"></script>
-	<script src="/js/jquery.fancybox.min.js"></script>
+	<script src="js/jquery-2.0.3.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/alfaNavbar.min.js"></script>
+	<script src="js/jquery.fancybox.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-	<script src="/js/scripts.js"></script>
+	<script src="js/scripts.js"></script>
 	<!-- Scripts> -->
 </body>
 </html>
