upd text and favicon

--- a/en/index.html
+++ b/en/index.html
@@ -8,6 +8,9 @@
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+	<link rel="icon" href="../favicon.ico" type="image/x-icon">
+
 	<link rel="stylesheet" href="../css/reset.css" media="all">
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
@@ -139,7 +142,7 @@
 								</h2>
 								<h3 class="box-title-ann">What is PRODUCT PROTOCOL?</h3>
 								<p>
-									Product Protocol is a opens source protocol for crowdfunding/crowdlending campaigns based on digital assets issuing, integration with all business processes, funds management and financial operations.
+									Product Protocol is a opensource protocol for crowdfunding/crowdlending campaigns based on digital assets issuing, integration with all business processes, funds management and financial operations.
 									<br>Product Protocol is focused on creating a platform that allows an entrepreneur to tokenize their assets and raise funds for scaling
 								</p>
 								<p class="small">
