change medium link

--- a/en/index.html
+++ b/en/index.html
@@ -401,7 +401,7 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://medium.com/@pprotocolio" class="social-image">
+							<a href="https://medium.com/@p.protocol" class="social-image">
 								<img src="/images/social-image-3.png" alt="">
 							</a>
 						</div>
