--- a/en/index.html
+++ b/en/index.html
@@ -35,6 +35,7 @@
 					<li class="header-nav-list-item"><a href="" title="" target="_blank">Protocol</a></li>
 					<li class="header-nav-list-item"><a href="PP_WP_e.pdf" title="" target="_blank">White Paper</a></li>
 					<li class="header-nav-list-item"><a href="PP_OP_e.pdf" title="" class="current" target="_blank">One Pager</a></li>
+					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
 							<span class="icon en-icon"></span>
