--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<li class="header-nav-list-item"><a href="#" title="">실험 계획안</a></li>
 					<li class="header-nav-list-item"><a href="/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
 					<li class="header-nav-list-item"><a href="/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
+					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
 							<span class="icon kr-icon"></span>
