--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<div class="header-nav-button"><div class="header-nav-button-icon"></div></div>
 				<ul class="header-nav-list">
 					<li class="header-nav-list-item"><a href="#" title="">실험 계획안</a></li>
-					<li class="header-nav-list-item"><a href="/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
-					<li class="header-nav-list-item"><a href="/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
+					<li class="header-nav-list-item"><a href="https://s3-eu-west-1.amazonaws.com/pprotocolio/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
+					<li class="header-nav-list-item"><a href="https://s3-eu-west-1.amazonaws.com/pprotocolio/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
 					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
