--- a/en/index.html
+++ b/en/index.html
@@ -33,8 +33,8 @@
 				<div class="header-nav-button"><div class="header-nav-button-icon"></div></div>
 				<ul class="header-nav-list">
 					<li class="header-nav-list-item"><a href="" title="" target="_blank">Protocol</a></li>
-					<li class="header-nav-list-item"><a href="https://s3-eu-west-1.amazonaws.com/pprotocolio/PP_WP_e.pdf" title="" target="_blank">White Paper</a></li>
-					<li class="header-nav-list-item"><a href="https://s3-eu-west-1.amazonaws.com/pprotocolio/PP_OP_e.pdf" title="" class="current" target="_blank">One Pager</a></li>
+					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_e.pdf" title="" target="_blank">White Paper</a></li>
+					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_OP_e.pdf" title="" class="current" target="_blank">One Pager</a></li>
 					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
@@ -127,7 +127,7 @@
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://github.com/ProductProtocol-github" class="button white block">Github</a>
+								<a href="https://github.com/ProductProtocol" class="button white block">Github</a>
 							</div>
 						</div>
 					</div>
