--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<div class="header-nav-button"><div class="header-nav-button-icon"></div></div>
 				<ul class="header-nav-list">
 					<li class="header-nav-list-item"><a href="#" title="">실험 계획안</a></li>
-					<li class="header-nav-list-item"><a href="https://s3-eu-west-1.amazonaws.com/pprotocolio/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
-					<li class="header-nav-list-item"><a href="https://s3-eu-west-1.amazonaws.com/pprotocolio/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
+					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
+					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
 					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
@@ -125,7 +125,7 @@
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://github.com/ProductProtocol-github" class="button white block">기생충</a>
+								<a href="https://github.com/ProductProtocol" class="button white block">기생충</a>
 							</div>
 						</div>
 					</div>
