--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="PP_WP_k.pdf" title="" target="_blank" class="button white block">백지</a>
+								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank" class="button white block">백지</a>
 							</div>
 						</div>
 						<div class="form-box">
