--- a/en/index.html
+++ b/en/index.html
@@ -122,7 +122,7 @@
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="PP_WP_e.pdf" title="" target="_blank" class="button white block">Whitepaper</a>
+								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_e.pdf" title="" target="_blank" class="button white block">Whitepaper</a>
 							</div>
 						</div>
 						<div class="form-box">
