upd css animations

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<li class="header-nav-list-item"><a href="#" title="">실험 계획안</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
-					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
+					<li class="header-nav-list-item"><a href="/profile" title="">윤곽</a></li>
 					<li class="header-nav-list-item">
 						<a href="" title="" class="dropdown-button">
 							<span class="icon kr-icon"></span>
@@ -73,7 +73,7 @@
 				<div class="rect rect-2"></div>
 				<div class="blot blot-10"></div>
 			</div>
-			<section class="box box-table main" id="main">
+			<section class="box box-table main go-animate" id="main">
 				<div class="box-cell">
 					<div class="main-image-wrapper">
 						<div class="main-image-coin"></div>
@@ -132,7 +132,7 @@
 				</div>
 			</section>
 			<div class="about-wrapper">
-				<section class="box full box-table about" id="about">
+				<section class="box full box-table about go-animate" id="about">
 					<div class="box-cell">
 						<div class="split">
 							<div class="split-col">
@@ -177,7 +177,7 @@
 			<div class="colored-bg-elements">
 				<div class="blot blot-10"></div>
 			</div>
-			<section class="box box-table protocol" id="protocol">
+			<section class="box box-table protocol go-animate" id="protocol">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						실험 계획안
@@ -261,7 +261,7 @@
 				<div class="blot blot-6"></div>
 				<div class="flash flash-1"></div>
 			</div>
-			<section class="box box-table tokensale" id=tokensale>
+			<section class="box box-table tokensale go-animate" id=tokensale>
 				<div class="box-cell">
 					<h2 class="box-title">
 						토큰 판매
@@ -306,7 +306,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="box box-table roadmap" id="roadmap">
+			<section class="box box-table roadmap go-animate" id="roadmap">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						로드맵
@@ -367,7 +367,7 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
-			<section class="box box-table social" id="social">
+			<section class="box box-table social go-animate" id="social">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
 						사회적인
