upd images and diagrams

--- a/en/index.html
+++ b/en/index.html
@@ -283,7 +283,7 @@
 								</div>
 								<div class="graph">
 									<div class="graph-circle-title">100 %</div>
-									<canvas id="doughnut-chart-1" width="460" height="460"></canvas>
+									<div class="diag diag-1"></div>
 								</div>
 								<div class="graph-text">
 									<div class="graph-text-box"><strong>30%</strong> - marketing and first tokenised products </div>
@@ -301,7 +301,7 @@
 								</div>
 								<div class="graph">
 									<div class="graph-circle-title">100 M PPO</div>
-									<canvas id="doughnut-chart-2" width="460" height="460"></canvas>
+									<div class="diag diag-1"></div>
 								</div>
 								<div class="graph-text">
 									<div class="graph-text-box"><strong>1. 65 000 000 PPO</strong> - ICO</div>
@@ -545,7 +545,6 @@
 	<script src="../js/slick.min.js"></script>
 	<script src="../js/alfaNavbar.min.js"></script>
 	<script src="../js/jquery.fancybox.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
 	<script src="../js/scripts.js"></script>
 	<!-- Scripts> -->
 </body>
