--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 				<div class="rect rect-1"></div>
 				<div class="rect rect-2"></div>
 				<div class="blot blot-10"></div>
+				<div class="blot blot-11"></div>
 			</div>
 			<section class="box box-table main go-animate" id="main">
 				<div class="box-cell">
@@ -259,7 +260,6 @@
 			<div class="colored-bg-elements">
 				<div class="blot blot-5"></div>
 				<div class="blot blot-6"></div>
-				<div class="flash flash-1"></div>
 			</div>
 			<section class="box box-table tokensale go-animate" id=tokensale>
 				<div class="box-cell">
@@ -275,7 +275,7 @@
 								</div>
 								<div class="graph">
 									<div class="graph-circle-title">100 %</div>
-									<canvas id="doughnut-chart-1" width="460" height="460"></canvas>
+									<div class="diag diag-1"></div>
 								</div>
 								<div class="graph-text">
 									<div class="graph-text-box"><strong>30%</strong> - 마케팅 및 최초의 토큰 화 된 제품</div>
@@ -293,7 +293,7 @@
 								</div>
 								<div class="graph">
 									<div class="graph-circle-title">100 M PPO</div>
-									<canvas id="doughnut-chart-2" width="460" height="460"></canvas>
+									<div class="diag diag-2"></div>
 								</div>
 								<div class="graph-text">
 									<div class="graph-text-box"><strong>1. 65 000 000 PPO</strong> - 이코</div>
@@ -467,7 +467,6 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/alfaNavbar.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
 	<script src="js/scripts.js"></script>
 	<!-- Scripts> -->
 </body>
