--- a/en/index.html
+++ b/en/index.html
@@ -117,7 +117,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="#feedback-popup" data-fancybox class="button white block">Join the whitelist</a>
+								<a href="#feedback-popup" data-fancybox class="button white block">Participate</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -162,7 +162,6 @@
 			</div>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -246,8 +245,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button dark"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">join the whitelist</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -361,8 +359,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">join the whitelist</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -436,8 +433,7 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">Documents</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">join the whitelist</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">Participate</a>
 			</div>
 		</div>
 		<footer></footer>
