--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="#feedback-popup" data-fancybox class="button white block">화이트리스트에 가입</a>
+								<a href="#feedback-popup" data-fancybox class="button white block">어느 정도 가지다</a>
 							</div>
 						</div>
 						<div class="form-box">
@@ -161,7 +161,6 @@
 			</div>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
 			</div>
 		</div>
 		<div class="top-gradient-bg box-wrapper">
@@ -242,8 +241,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button dark"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">화이트리스트에 가입</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper">
@@ -352,8 +350,7 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">화이트리스트에 가입</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 		<div class="colored-bg v4 box-wrapper">
@@ -424,8 +421,7 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocolko" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="#" class="bottom-panel-button"><span class="icon documents-icon"></span><span class="mhide">서류</span></a>
-				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">화이트리스트에 가입</a>
+				<a href="#feedback-popup" data-fancybox class="button white moved-to-bottom-panel hide">어느 정도 가지다</a>
 			</div>
 		</div>
 		<footer></footer>
